# cgadimpl

./: .gitignore  .gitmodules  INSTALLATION.md  README.md  add_team_sheet.py  blebleble  build_errors.txt  build_output.txt  build_output_final.txt  build_output_final_2.txt  build_output_final_3.txt  build_output_final_4.txt  checkpoint.cpp  example.mlir  exampleeeee.cpp  massif.out.101921  massif.out.96695  plan_v2.xlsx  prog6  test_results.txt
Benchmark/: CMakeLists.txt  RMSNormLayer.cpp  main.cpp  test.cpp
MlirCompiler-main/: .gitignore  CMakeLists.txt
MlirCompiler-main/cmake/: mlir-compilerConfig.cmake.in
MlirCompiler-main/include/Compiler/Transforms/: CMakeLists.txt  FastmathFlag.h  FuseMatmulBias.h  ParallelizeOuterLoops.h  Passes.h  Passes.td
MlirCompiler-main/ltest/: abs.mlir  const.mlir  pow.mlir
MlirCompiler-main/test/: FUSION_DEMO.md  KERNEL_LOWERING_STAGES.md  PARALLEL_README.md  comparison.py  final_benchmark.cpp  loweringtest.mlir  matmul_benchmark.cpp  matmul_final  matmul_omp.cpp  matmul_omp.s  openblas.cpp  output.mlir  output1.mlir  output_fastmath.ll  output_safe.ll  partial.mlir  test.mlir  test1.mlir  test2.mlir  test_fusion.mlir  testexpo.mlir  testtri.mlir  time.cpp  (+1 more)
MlirCompiler-main/tools/nova-opt/: CMakeLists.txt  nova-opt.cpp
cgadimpl/: CMakeLists.txt  README.md  README_CHECKPOINTING.md  run.txt
cgadimpl/Readme/: autodiff.md  careful_deletion.md  checkpoint.md  cuda_graphs.md  debug.md  export_hlo.md  graph.md  inplace.md  jit_compiler.md  jvp_ops.md  mp.md  nodeops.md  ops.md  optim.md  readyqueue.md  runtime.md  version_tracker.md  vjp_ops.md
cgadimpl/Tests/: bench_relu.cpp  benchmark_memory.cpp  benchmark_memory_approaches.cpp  test.cpp  test_adam.cpp  test_adam1.cpp  test_adam2.cpp  test_adam_optim_prod.cpp  test_ag.cpp  test_arithmetic.cpp  test_attention.cpp  test_beta.cpp  test_careful_deletion.cpp  test_checkpoint.cpp  test_checkpoint_advanced.cpp  test_checkpoint_compreshensive.cpp  test_complex_mlp.cpp  test_core_ops_gpu.cpp  test_dag_analysis.cpp  test_dependency_correctness.cpp  test_dependency_counter.cpp  test_dependency_deep_branching.cpp  test_dependency_multi_join.cpp  test_dependency_performance.cpp  test_dependency_weight_tying.cpp  test_dependency_wide_fanout.cpp  test_dependncy_counter2.cpp  test_end_to_end_gpu.cpp  test_gantlet.cpp  test_gelu_bench.cpp  test_graph_compile.cpp  test_graph_gpu.cpp  test_inplace.cpp  test_kitchen_sink_mlp.cpp  test_libtorch_vs_blufix.cpp  test_loss.cpp  test_mega.cpp  test_mixed_precision.cpp  test_mixed_precision_mlp.cpp  test_mlp.cpp  (+19 more)
cgadimpl/Tests/Benchmark_tests/: test_mlp.cpp
cgadimpl/Tests/autograd_hooks_testing/: test_hooks.cpp
cgadimpl/Tests/dependency_counter_correctness/: test_dependency_correctness.cpp  test_dependency_deep_branching.cpp  test_dependency_diamond.cpp  test_dependency_multi_join.cpp
cgadimpl/Tests/ops_test/: test_activation.cpp  test_arithmetic.cpp  test_attention.cpp  test_linalg.cpp  test_loss.cpp  test_normalization.cpp  test_reduction.cpp  test_trigonometry.cpp
cgadimpl/docs/: dependency_debug.txt  index.md
cgadimpl/include/: optim.hpp  tensor.hpp
cgadimpl/include/ad/: ag_all.hpp  autodiff.hpp  careful_deletion.hpp  checkpoint.hpp  cuda_graphs.hpp  debug.hpp  export_hlo.hpp  graph.hpp  inplace.hpp  kernels_api.hpp  mlir_emitter.hpp  nodeops.hpp  ops.hpp  runtime.hpp  schema.hpp  tensor.hpp
cgadimpl/include/ad/autodiff/: autodiff.hpp  careful_deletion.hpp  checkpoint.hpp  inplace.hpp
cgadimpl/include/ad/core/: ReadyQueue.hpp  graph.hpp  mlir_emitter.hpp  nodiscard.hpp  version_tracker.hpp
cgadimpl/include/ad/detail/: autodiff_ops.hpp  ops.def
cgadimpl/include/ad/detail/ops/: activation.def  attention.def  core.def  elementwise.def  linalg.def  loss.def  normalization.def  reduction.def  trigonometry.def
cgadimpl/include/ad/ops/: kernels_api.hpp  nodeops.hpp  ops.hpp
cgadimpl/include/ad/optimizer/: loss_scaler.hpp  optim.hpp
cgadimpl/include/ad/runtime/: cuda_graphs.hpp  jit_compiler.hpp  runtime.hpp
cgadimpl/include/ad/utils/: debug.hpp  export_hlo.hpp
cgadimpl/include/nn/: nn.hpp
cgadimpl/src/: ops.cpp  tensor.cpp
cgadimpl/src/autodiff/: autodiff.cpp  autodiff_jvp_ops.cpp  autodiff_vjp_ops.cpp  careful_deletion.cpp  checkpoint.cpp  inplace.cpp
cgadimpl/src/core/: autodiff.cpp  careful_deletion.cpp  checkpoint.cpp  graph.cpp  inplace.cpp  mlir_emitter.cpp  nodeops.cpp  ops.cpp  readyqueue.cpp  schema.cpp
cgadimpl/src/kernel_stuff/: kernels_loader.cpp  runtime.cpp
cgadimpl/src/kernels/: kernels_loader.cpp  runtime.cpp
cgadimpl/src/nn/: nn.cpp
cgadimpl/src/ops/: activation.cpp  arithmetic.cpp  attention.cpp  linalg.cpp  loss.cpp  nodeops.cpp  normalization.cpp  ops.cpp  reduction.cpp  trigonometry.cpp
cgadimpl/src/optimizer/: loss_scaler.cpp  optim.cpp
cgadimpl/src/runtime/: cuda_graphs.cpp  jit_compiler.cpp
cgadimpl/src/tensor/: tensor.cpp
cgadimpl/src/tools/: debug.cpp  export_hlo.cpp
cgadimpl/tests/: test.cpp  test_ag.cpp  test_careful_deletion.cpp  test_checkpoint.cpp  test_checkpoint_comprehensive.cpp  test_checkpoint_memory_savings.cpp  test_checkpoint_production.cpp  test_checkpoint_structures.cpp  test_complex_mlp.cpp  test_core_ops_gpu.cpp  test_end_to_end_gpu.cpp  test_gantlet.cpp  test_graph_compile.cpp  test_graph_gpu.cpp  test_inplace.cpp  test_kernels_cpu.cpp  test_kernels_gpu.cpp  test_mlp.cpp  test_mlp_training.cpp  test_nn.cpp  test_nodeops.cpp  test_scheme.cpp  test_tensor_numel.cpp  test_version.cpp  tiny_handcalc.cpp
kernels/: CMakeLists.txt
kernels/cpu/: CMakeLists.txt
kernels/cpu/benchmark/: benchmark_utils.hpp  kernels_for_test.hpp  test_kernels.cpp  test_linear.cpp  test_matmul_aspect.cpp  test_matmul_cache.cpp  test_matmul_latency.cpp  test_matmul_scalability.cpp  test_matmul_throughput.cpp
kernels/cpu/src/: adkernels_cpu.cpp  agkernels_cpu.cpp  matker.cu
kernels/gpu/: CMakeLists.txt  eltwise.cu  entry.cu  mm_cublas.cu  vjp.cu  zero.cu
tensor/: .gitignore  README.md  lib_compile.sh  test_compile.sh
testing-mlir-link/: CMakeLists.txt  main.cpp
ztools/: run.sh
(+142 files in other folders)
